# NexusAI

./: .gitignore  CLAUDE.md  SIGNING.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-00-PLAN.md  01-00-SUMMARY.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-REVIEW.md  01-UI-SPEC.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-llm-chat/: 02-00-PLAN.md  02-00-SUMMARY.md  02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-07-PLAN.md  02-07-SUMMARY.md  02-08-PLAN.md  02-08-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-UI-SPEC.md  02-VALIDATION.md
.planning/phases/03-knowledge-base-rag/: 03-00-PLAN.md  03-00-SUMMARY.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-07-PLAN.md  03-07-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-UI-SPEC.md  03-VALIDATION.md  03-VERIFICATION.md  deferred-items.md
.planning/phases/04-llm-benchmarking/: 04-00-PLAN.md  04-00-SUMMARY.md  04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-UI-SPEC.md  04-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/nexusai-agents/: Cargo.toml
src-tauri/crates/nexusai-agents/src/: lib.rs
src-tauri/crates/nexusai-calendar/: Cargo.toml
src-tauri/crates/nexusai-calendar/src/: lib.rs
src-tauri/crates/nexusai-chat/: Cargo.toml
src-tauri/crates/nexusai-chat/src/: attachments.rs  lib.rs  providers.rs  schema.rs  streaming.rs  title.rs
src-tauri/crates/nexusai-gmail/: Cargo.toml
src-tauri/crates/nexusai-kb/: Cargo.toml
src-tauri/crates/nexusai-kb/src/: chunk.rs  embed.rs  ingest.rs  lib.rs  progress.rs  schema.rs  search.rs  store.rs  vector.rs
src-tauri/crates/nexusai-kb/tests/fixtures/: article.html  sample.md  sample.txt
src-tauri/crates/nexusai-mcp/: Cargo.toml
src-tauri/crates/nexusai-mcp/src/: lib.rs
src-tauri/crates/nexusai-settings/: Cargo.toml
src-tauri/crates/nexusai-settings/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
src/components/layout/: AppShell.tsx  ModuleStub.tsx  Sidebar.tsx
src/components/settings/: ApiKeysSection.tsx  AppearanceSection.tsx  ModelsSection.tsx  SettingsNav.tsx
src/components/ui/: alert-dialog.tsx  context-menu.tsx  dropdown-menu.tsx  resizable.tsx  scroll-area.tsx  select.tsx  sonner.tsx  table.tsx  tabs.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
src/lib/: bindings.ts
src/lib/db/: proxy.ts  schema.ts
src/lib/kb/: citations.ts
src/lib/queries/: benchmark.ts  chat.ts  kb.ts
src/lib/stores/: appearance.ts  benchmark.ts  chat.ts  indexing.ts  settings.ts
src/routes/: __root.tsx  settings.tsx
src/routes/agents/: index.tsx
tests/: api-keys.test.ts  appearance.test.ts  benchmark-history.test.ts  benchmark-store.test.ts  benchmark-streaming.test.ts  channel.test.ts  chat-attachments.test.ts  chat-history.test.ts  chat-markdown.test.ts  chat-model-switch.test.ts  chat-streaming.test.ts  config.test.ts  db-proxy.test.ts  kb-indexing-store.test.ts  kb-items-table.test.tsx  kb-notes-editor.test.tsx  routes.test.tsx  settings-store.test.ts  setup.ts
(+31 files in other folders)
