[workspace]
members = [
    ".",
    "crates/nexusai-settings",
    "crates/nexusai-chat",
    "crates/nexusai-kb",
    "crates/nexusai-gmail",
    "crates/nexusai-calendar",
    "crates/nexusai-mcp",
    "crates/nexusai-agents",
]
resolver = "2"

[workspace.dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[package]
name = "nexusai"
version = "0.1.0"
description = "NexusAI — Tauri v2 desktop AI super-app"
edition = "2021"

[lib]
name = "nexusai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true }
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
keyring = { version = "3", features = ["sync-secret-service"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.25" }
specta-typescript = "0.0.12"
nexusai-settings = { path = "crates/nexusai-settings" }
nexusai-chat = { path = "crates/nexusai-chat" }
nexusai-kb = { path = "crates/nexusai-kb" }
nexusai-gmail = { path = "crates/nexusai-gmail" }
nexusai-calendar = { path = "crates/nexusai-calendar" }
nexusai-mcp = { path = "crates/nexusai-mcp" }
nexusai-agents = { path = "crates/nexusai-agents" }
