[package]
name = "nexusai-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-openai = "0.27"
reqwest = { version = "0.12", features = ["json", "stream"] }
base64 = "0.22"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
nexusai-settings = { path = "../nexusai-settings" }
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.25" }
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
lazy_static = "1"
futures = "0.3"
tauri-plugin-dialog = "2"
